[project]
name = "apydb"
version = "0.1.0"
description = "A Python DB, Local Document(JSON) DB"
keywords = ["database", "document db", "json", "local document db"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = []

[project.optional-dependencies]
orjson = ["orjson>=3.11.5"]
async = ["aiofiles>=25.1.0"]
all = ["aiofiles>=25.1.0", "orjson>=3.11.5"]
itest = ["pymongo>=4.16.0"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.14"]
